style fix for feature spacing on desktop

--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -154,7 +154,7 @@
     .feature-margin {
         width: 100%;
         display: flex;
-        max-width: 70rem;
+        max-width: 80rem;
         margin-right: auto;
         margin-left: auto;
         padding: 0 .5rem;
